--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "microverse-math-magician-project",
-  "homepage": "https://m-aminalizadeh.github.io/microverse-math-magician-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,8 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
