Add gh-pages url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "microverse-math-magician-project",
+  "homepage": "https://m-aminalizadeh.github.io/microverse-math-magician-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
